# league-cdk

./: .gitignore  app.py  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yaml  tests.yaml
config/: event_rules.yaml  layers.py  layers.yaml  tables.py  tables.yaml
config/lambdas/: events.yaml  login_reg.py  login_reg.yaml
layers/content/python/league/templates/: change_password.html  header.html  register_form.html
layers/league/python/league/: auth.py  aws_secrets.py  credentials.py  logger.py  validate.py
layers/league/python/league/content/: libs.py
layers/league/python/league/content/templates/: home.html  login_form.html  password_form.html  register_form.html  reset_form.html
layers/league/python/league/static/: pages.py
layers/league/python/league/tables/: reset.py  sessions.py  users.py
layers/league/python/league/tables/item/: libs.py  types.py
layers/league/python/league/tables/response/: types.py
layers/league/python/league/templates/: change_password.html  login_form.html
layers/login_registration/: requirements.txt
layers/pkg/bcrypt/: requirements.txt
layers/pkg/common/: requirements.txt
layers/pkg/email/: requirements.txt
layers/sessions/python/: auth_layer.py
layers/sessions/python/league/: aws_secrets.py  validate.py
layers/static/python/: html_layer.py
layers/tables/python/league/tables/: item_libs.py  item_types.py  password_reset.py  reset.py  response_libs.py  response_types.py  sessions.py  users.py
layers/tables/python/league/tables/item/: libs.py
layers/tables/python/league/tables/response/: libs.py
league/: league_root_stack.py  login_registration_stack.py
league_cdk/: event_stack.py  events_stack.py  layers_stack.py  league_root_stack.py  login_registration_stack.py
lib/: ddb.py  lambdas.py  layers.py
src/events/registration/: registration.py
src/events/registration_backout/: registration_backout.py
src/home_page/get/: home_get.py
src/password_reset/get/: reset_get.py
src/password_reset/id/get/: reset_id_get.py
src/password_reset/id/post/: reset_id_post.py
src/password_reset/post/: reset_post.py
src/user_login/get/: login_get.py
src/user_login/post/: login_post.py
src/user_registration/get/: register_get.py
src/user_registration/post/: register_post.py
tests/cdk/login_registration_stack/: test_dynamo_db.py  test_lambda.py
tests/cdk/root_stack/: test_api_gateway.py
tests/fixtures/tables/: resets.py  sessions.py  users.py
tests/src/: redo_home.py  test_auth_layer_db_sessions.py  test_auth_layer_player_ids.py  test_home.py  test_league_layer_credentials.py  test_league_layer_validate.py  test_league_table_reset.py  test_league_tables_item_libs.py  test_league_tables_response_libs.py  test_login.py  test_register.py  test_reset.py  test_reset_id.py  test_sessions_layer_auth.py  test_sessions_layer_credentials.py  test_sessions_layer_secrets.py  test_sessions_layer_validate.py  test_tables_layer_item_libs.py  test_tables_layer_reset.py  test_tables_layer_response_libs.py  test_tables_layer_sessions.py  test_tables_layer_users.py
