[project]
name = 'League'
version = '0.1.0'
description = 'AWS Lambda & DynamoDB backed web application'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'boto3>=1.42.0,<2.0.0',
    'botocore>=1.42.0,<2.0.0',
    'aws-cdk-lib>=2.244.0,<3.0.0',
    'constructs>=10.5.0,<11.0.0'
]

[tool.pytest.ini_options]
addopts = '-rA -s -v'
markers = [
    'cdk: CDK related tests',
    'homepage: Homepage related tests',
    'login: Login related tests',
    'registration: Registration related tests',
    'reset: Password reset related tests',
    'resetid: Password reset Id related tests',
    'sessions: Session related tests',
    'player_id: PlayerId related tests',
    'item_libs: DB item related libraries tests',
    'response_libs: DB Response transform libraries tests',
    'users_table: Users table get, put, update & exception tests',
    'sessions_table: Sessions table get, put & exception tests',
    'reset_table: PasswordReset table get, put & exception tests',
]

[project.optional-dependencies]
dev = [
    'aws_lambda_context>=1.1.0,<2.0.0',
    'aws_lambda_typing>=2.20.0,<3.0.0',
    'bcrypt>=5.0.0,<6.0.0',
    'botocore>=1.42.0,<2.0.0',
    'email-validator>=2.3.0,<3.0.0',
    'freezegun>=1.5.5,<2.0.0',
    'moto>=5.1,<6.0',
    'mypy>=1.20.0,<2.0.0',
    'mypy_boto3_dynamodb>=1.42.73,<2.0.0',
    'pytest>=9.0,<10.0',
    'pytest-uuid==1.0.0',
    'pytest-mock>=3.15,<4.0',
    'ruff>=0.15.10,<1.0.0',
    'types-boto3[dynamodb]>=1.42,<2.0',
    'types-boto3[secretsmanager]>=1.42,<2.0.0',
]

[tool.ruff]
line-length = 79
target-version = 'py312'

[tool.ruff.lint]
extend-select = [
    'F',        # Pyflakes rules
    'W',        # PyCodeStyle warnings
    'E',        # PyCodeStyle errors
    'I',        # Sort imports properly
    'UP',       # Warn if certain things can changed due to newer Python versions
    'C4',       # Catch incorrect use of comprehensions, dict, list, etc
    'RET',      # Good return practices
    'SIM',      # Common simplification rules
    'TID',      # Some good import practices
    'TC',       # Enforce importing certain types in a TYPE_CHECKING block
    'PTH',      # Use pathlib instead of os.path
    'TD',       # Be diligent with TODO comments
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
